Changes to use default `changelist` as "-RELEASE" for easier integration with other project `pom.xml` that is to use this BOM

--- a/pom.xml
+++ b/pom.xml
@@ -231,7 +231,7 @@
                 <activeByDefault>true</activeByDefault>
             </activation>
             <properties>
-                <changelist>-SNAPSHOT</changelist>
+                <changelist>-RELEASE</changelist>
             </properties>
         </profile>
         <!-- profile to deploy the BOM to GitHub as RELEASE ; use command ...
