--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,18 @@
         <!-- CSV processor -->
         <super.csv.version>2.4.0</super.csv.version>
         
+        <!-- gRPC -->
+        <io.grpc.version>1.68.0</io.grpc.version>
+        <proto.google.common.protos.version>2.46.0</proto.google.common.protos.version>
+        <protobuf.java.version>4.28.2</protobuf.java.version>
+        <protovalidate.version>0.4.2</protovalidate.version>
+        
+        <!-- Slf4j -->
+        <slf4j.simple.version>2.0.16</slf4j.simple.version>
+        
+        <!-- Unit Test -->
+        <mockito.inline.version>5.2.0</mockito.inline.version>
+        
         <!-- Maven Plugins -->
         <jib.maven.version>3.4.3</jib.maven.version>
         <flatten.maven.version>1.6.0</flatten.maven.version>
@@ -59,6 +71,8 @@
         <maven.javadoc.plugin.version>3.10.1</maven.javadoc.plugin.version>
         <maven.deploy.plugin.version>3.1.3</maven.deploy.plugin.version>
         <github.release.maven.plugin.version>1.0.7</github.release.maven.plugin.version>
+        <os.maven.plugin.version>1.7.1</os.maven.plugin.version>
+        <protobuf.maven.plugin.version>0.6.1</protobuf.maven.plugin.version>
     </properties>
     
     <dependencyManagement>
@@ -109,6 +123,57 @@
                 <artifactId>super-csv-java8</artifactId>
                 <version>${super.csv.version}</version>
             </dependency>
+            
+            <!-- gRPC -->
+            <dependency>
+                <groupId>io.grpc</groupId>
+                <artifactId>grpc-stub</artifactId>
+                <version>${io.grpc.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.grpc</groupId>
+                <artifactId>grpc-protobuf</artifactId>
+                <version>${io.grpc.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.grpc</groupId>
+                <artifactId>grpc-services</artifactId>
+                <version>${io.grpc.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.google.api.grpc</groupId>
+                <artifactId>proto-google-common-protos</artifactId>
+                <version>${proto.google.common.protos.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.google.protobuf</groupId>
+                <artifactId>protobuf-java</artifactId>
+                <version>${protobuf.java.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.google.protobuf</groupId>
+                <artifactId>protobuf-java-util</artifactId>
+                <version>${protobuf.java.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>build.buf</groupId>
+                <artifactId>protovalidate</artifactId>
+                <version>${protovalidate.version}</version>
+            </dependency>
+            
+            <!-- Slf4j -->
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-simple</artifactId>
+                <version>${slf4j.simple.version}</version>
+            </dependency>
+            
+            <!-- Unit Test -->
+            <dependency>
+                <groupId>org.mockito</groupId>
+                <artifactId>mockito-inline</artifactId>
+                <version>${mockito.inline.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 	
@@ -149,6 +214,16 @@
                     <groupId>com.ragedunicorn.tools.maven</groupId>
                     <artifactId>github-release-maven-plugin</artifactId>
                     <version>${github.release.maven.plugin.version}</version>
+                </plugin>
+                <plugin>
+                    <groupId>kr.motd.maven</groupId>
+                    <artifactId>os-maven-plugin</artifactId>
+                    <version>${os.maven.plugin.version}</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.xolstice.maven.plugins</groupId>
+                    <artifactId>protobuf-maven-plugin</artifactId>
+                    <version>${protobuf.maven.plugin.version}</version>
                 </plugin>
             </plugins>
         </pluginManagement>
