--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,11 @@
         <!-- Flink -->
         <flink.version>1.20.0</flink.version>
         <flink.connector.kafka.version>3.3.0-1.20</flink.connector.kafka.version>
+        <flink.connector.gcp.pubsub.version>3.1.0-1.19</flink.connector.gcp.pubsub.version>
+        <flink.confluent.table.api.plugin.version>1.20-42</flink.confluent.table.api.plugin.version>
+        
+        <!-- Apache Commons CLI -->
+        <commons.cli.version>1.9.0</commons.cli.version>
         
         <!-- Unit Test -->
         <mockito.inline.version>5.2.0</mockito.inline.version>
@@ -77,6 +82,8 @@
         <maven.source.plugin.version>3.3.1</maven.source.plugin.version>
         <maven.javadoc.plugin.version>3.10.1</maven.javadoc.plugin.version>
         <maven.deploy.plugin.version>3.1.3</maven.deploy.plugin.version>
+        <maven.compiler.plugin.version>3.13.0</maven.compiler.plugin.version>
+        <maven.shade.plugin.version>3.6.0</maven.shade.plugin.version>
         <github.release.maven.plugin.version>1.0.7</github.release.maven.plugin.version>
         <os.maven.plugin.version>1.7.1</os.maven.plugin.version>
         <protobuf.maven.plugin.version>0.6.1</protobuf.maven.plugin.version>
@@ -195,6 +202,11 @@
             </dependency>
             <dependency>
                 <groupId>org.apache.flink</groupId>
+                <artifactId>flink-connector-base</artifactId>
+                <version>${flink.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.flink</groupId>
                 <artifactId>flink-streaming-java</artifactId>
                 <version>${flink.version}</version>
             </dependency>
@@ -204,9 +216,31 @@
                 <version>${flink.version}</version>
             </dependency>
             <dependency>
+               <groupId>org.apache.flink</groupId>
+               <artifactId>flink-table-api-java</artifactId>
+               <version>${flink.version}</version>
+            </dependency>
+            <dependency>
+               <groupId>io.confluent.flink</groupId>
+               <artifactId>confluent-flink-table-api-java-plugin</artifactId>
+               <version>${flink.confluent.table.api.plugin.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>org.apache.flink</groupId>
                 <artifactId>flink-connector-kafka</artifactId>
                 <version>${flink.connector.kafka.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.flink</groupId>
+                <artifactId>flink-connector-gcp-pubsub</artifactId>
+                <version>${flink.connector.gcp.pubsub.version}</version>
+            </dependency>
+            
+            <!-- Apache Commons CLI -->
+            <dependency>
+                <groupId>commons-cli</groupId>
+                <artifactId>commons-cli</artifactId>
+                <version>${commons.cli.version}</version>
             </dependency>
             
             <!-- Unit Test -->
@@ -214,6 +248,11 @@
                 <groupId>org.mockito</groupId>
                 <artifactId>mockito-inline</artifactId>
                 <version>${mockito.inline.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.flink</groupId>
+                <artifactId>flink-test-utils</artifactId>
+                <version>${flink.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -250,6 +289,16 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-deploy-plugin</artifactId>
                     <version>${maven.deploy.plugin.version}</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>${maven.compiler.plugin.version}</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-shade-plugin</artifactId>
+                    <version>${maven.shade.plugin.version}</version>
                 </plugin>
                 <plugin>
                     <groupId>com.ragedunicorn.tools.maven</groupId>
@@ -339,6 +388,29 @@
             </plugin>
         </plugins>
     </build>
+    
+    <repositories>
+        <repository>
+            <id>github-krakenninja</id>
+            <name>GitHub KrakenNinja Packages</name>
+            <url>https://maven.pkg.github.com/krakenninja/kraken-bom</url>
+        </repository>
+        <repository>
+            <id>confluent</id>
+            <url>https://packages.confluent.io/maven/</url>
+        </repository>
+        <repository>
+            <id>apache.snapshots</id>
+            <name>Apache Development Snapshot Repository</name>
+            <url>https://repository.apache.org/content/repositories/snapshots/</url>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
     
     <profiles>
         <profile>
