--- a/pom.xml
+++ b/pom.xml
@@ -34,8 +34,9 @@
         <!-- Jakarta -->
         <jakarta.annotation-api.version>3.0.0</jakarta.annotation-api.version>
         
-        <!-- Jackson -->
+        <!-- JSON -->
         <jackson.databind.version>2.18.0</jackson.databind.version>
+        <json.schema.validator.version>1.5.4</json.schema.validator.version>
         
         <!-- OpenTelemetry -->
         <opentelemetry.api.version>1.42.1</opentelemetry.api.version>
@@ -48,6 +49,11 @@
         
         <!-- CSV processor -->
         <super.csv.version>2.4.0</super.csv.version>
+        
+        <!-- CLI table rows-columns view 
+             https://code.google.com/archive/p/j-text-utils/
+        -->
+        <j.text.utils.version>0.3.4</j.text.utils.version>
         
         <!-- gRPC -->
         <io.grpc.version>1.68.0</io.grpc.version>
@@ -66,6 +72,9 @@
         <flink.connector.kafka.version>3.3.0-1.20</flink.connector.kafka.version>
         <flink.connector.gcp.pubsub.version>3.1.0-1.19</flink.connector.gcp.pubsub.version>
         <flink.confluent.table.api.plugin.version>1.20-42</flink.confluent.table.api.plugin.version>
+        
+        <!-- Google Cloud -->
+        <google.cloud.gcp.pubsub.version>1.134.1</google.cloud.gcp.pubsub.version>
         
         <!-- Apache Commons CLI -->
         <commons.cli.version>1.9.0</commons.cli.version>
@@ -88,6 +97,7 @@
         <os.maven.plugin.version>1.7.1</os.maven.plugin.version>
         <protobuf.maven.plugin.version>0.6.1</protobuf.maven.plugin.version>
         <jacoco.maven.plugin.version>0.8.12</jacoco.maven.plugin.version>
+        <copy.rename.maven.plugin.version>1.0.1</copy.rename.maven.plugin.version>
     </properties>
     
     <dependencyManagement>
@@ -99,11 +109,16 @@
                 <version>${jakarta.annotation-api.version}</version>
             </dependency>
             
-            <!-- Jackson -->
+            <!-- JSON -->
             <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-databind</artifactId>
                 <version>${jackson.databind.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.networknt</groupId>
+                <artifactId>json-schema-validator</artifactId>
+                <version>${json.schema.validator.version}</version>
             </dependency>
             
             <!-- OpenTelemetry -->
@@ -137,6 +152,15 @@
                 <groupId>net.sf.supercsv</groupId>
                 <artifactId>super-csv-java8</artifactId>
                 <version>${super.csv.version}</version>
+            </dependency>
+            
+            <!-- CLI table rows-columns view 
+                 https://code.google.com/archive/p/j-text-utils/
+            -->
+            <dependency>
+                <groupId>com.massisframework</groupId>
+                <artifactId>j-text-utils</artifactId>
+                <version>${j.text.utils.version}</version>
             </dependency>
             
             <!-- gRPC -->
@@ -213,6 +237,11 @@
             </dependency>
             <dependency>
                 <groupId>org.apache.flink</groupId>
+                <artifactId>flink-runtime-web</artifactId>
+                <version>${flink.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.flink</groupId>
                 <artifactId>flink-table-api-java-bridge</artifactId>
                 <version>${flink.version}</version>
             </dependency>
@@ -220,6 +249,11 @@
                <groupId>org.apache.flink</groupId>
                <artifactId>flink-table-api-java</artifactId>
                <version>${flink.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.flink</groupId>
+                <artifactId>flink-json</artifactId>
+                <version>${flink.version}</version>
             </dependency>
             <dependency>
                <groupId>io.confluent.flink</groupId>
@@ -235,6 +269,11 @@
                 <groupId>org.apache.flink</groupId>
                 <artifactId>flink-connector-gcp-pubsub</artifactId>
                 <version>${flink.connector.gcp.pubsub.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.google.cloud</groupId>
+                <artifactId>google-cloud-pubsub</artifactId>
+                <version>${google.cloud.gcp.pubsub.version}</version>
             </dependency>
             
             <!-- Apache Commons CLI -->
@@ -391,6 +430,12 @@
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+            <!-- copy+rename dependencies -->
+            <plugin>
+                <groupId>com.coderplus.maven.plugins</groupId>
+                <artifactId>copy-rename-maven-plugin</artifactId>
+                <version>${copy.rename.maven.plugin.version}</version>
             </plugin>
         </plugins>
     </build>
