--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.3.4</version>
+        <version>3.4.0</version>
     </parent>
     
     <groupId>com.github.krakenninja</groupId>
@@ -35,7 +35,6 @@
         <jakarta.annotation-api.version>3.0.0</jakarta.annotation-api.version>
         
         <!-- JSON -->
-        <jackson.databind.version>2.18.0</jackson.databind.version>
         <json.schema.validator.version>1.5.4</json.schema.validator.version>
         
         <!-- OpenTelemetry -->
@@ -78,6 +77,7 @@
         
         <!-- Apache Commons CLI -->
         <commons.cli.version>1.9.0</commons.cli.version>
+        <commons.io.version>2.18.0</commons.io.version>
         
         <!-- Unit Test -->
         <mockito.inline.version>5.2.0</mockito.inline.version>
@@ -110,11 +110,6 @@
             </dependency>
             
             <!-- JSON -->
-            <dependency>
-                <groupId>com.fasterxml.jackson.core</groupId>
-                <artifactId>jackson-databind</artifactId>
-                <version>${jackson.databind.version}</version>
-            </dependency>
             <dependency>
                 <groupId>com.networknt</groupId>
                 <artifactId>json-schema-validator</artifactId>
@@ -281,6 +276,11 @@
                 <groupId>commons-cli</groupId>
                 <artifactId>commons-cli</artifactId>
                 <version>${commons.cli.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>commons-io</groupId>
+                <artifactId>commons-io</artifactId>
+                <version>${commons.io.version}</version>
             </dependency>
             
             <!-- Unit Test -->
